Rewritten the protocol producing mac check to be based on the computation pattern